--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "protfolio",
   "version": "0.1.0",
-  "homepage": "https://MohamedHamdy94.github.io/Mohamed-Hamdy",
+  "homepage": "https://MohamedHamdy94.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -14,6 +14,10 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-vanilla-tilt": "^1.0.0",
+    "react-i18next": "^11.18.6",
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-responsive-carousel": "^3.2.23",
+
     "web-vitals": "^2.1.4"
   },
   "scripts": {
